twitter name has to be w/o "

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,14 +5,14 @@ Holger Kral:
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
   avatar: "/assets/images/avatar.jpg"
-  twitter: "HolgerKral"
-  github: "dev4223"
+  twitter: HolgerKral
+  github: dev4223
 
 developer4223:
   name: "dev eloper 4223"
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
   avatar: "/assets/images/avatar.jpg"
-  twitter: "HolgerKral"
-  github: "dev4223"
+  twitter: HolgerKral
+  github: dev4223
 
