twitter username was in "

--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-twitter:
-  username               : HolgerKral
+github                   : dev4223
+twitter                  : HolgerKral
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
@@ -42,7 +42,6 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
-github:  dev4223
 
 # Analytics
 analytics:
