--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-github                   : dev4223
-twitter                  : HolgerKral
+twitter:
+  username               : HolgerKral
 og_image                 : # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
@@ -42,6 +42,11 @@ social:
   type                   : # Person or Organization (defaults to Person)
   name                   : # If the user or organization name differs from the site's name
   links: # An array of links to social media profiles
+github:
+  username               : dev4223
+
+twitter                  : HolgerKral
+github                   : dev4223
 
 # Analytics
 analytics:
