test for prev context url

--- a/_config_prev.yml
+++ b/_config_prev.yml
@@ -1,4 +1,4 @@
 # PRODUCTION config
-url                      : "/" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : ""
