--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -2,3 +2,7 @@
 url                      : "https://ondata.hokr.us" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : "ondata.hokr.us"
+
+# exclude preview robots.txt
+exclude:
+  - robots.txt
