had to provide excludes in yml-files for contexts

--- a/_config_prev.yml
+++ b/_config_prev.yml
@@ -1,4 +1,36 @@
-# PRODUCTION config
+# PREVIEW config
 url                      : "" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : ""
+
+# same excludes like in _config.yml
+exclude:
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - vendor
+  - .asset-cache
+  - .bundle
+  - .jekyll-assets-cache
+  - .sass-cache
+  - assets/js/plugins
+  - assets/js/_main.js
+  - assets/js/vendor
+  - Capfile
+  - CHANGELOG
+  - config
+  - Gemfile
+  - Gemfile.lock
+  - Gruntfile.js
+  - gulpfile.js
+  - LICENSE
+  - log
+  - node_modules
+  - package.json
+  - Rakefile
+  - README
+  - tmp
+  - /docs # ignore Minimal Mistakes /docs
+  - /test # ignore Minimal Mistakes /test
+  - _posts/2017-03-17-ein-erstes-r-notebook.md
+  - _posts/2017-03-10-welcome-to-jekyll.md
+  - _posts/__replace_rnb.md
