--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,7 +9,7 @@ Holger Kral:
   github: dev4223
 
 developer4223:
-  name: "dev eloper 4223"
+  name: "dev4223"
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
   avatar: "/assets/images/avatar.jpg"
