--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ github                   : dev4223
 
 # Analytics
 analytics:
-  provider               : false # false (default), "google", "google-universal", "custom"
+  provider               : custom # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          :
 
