--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -30,11 +30,14 @@ en: &DEFAULT_EN
   recent_posts               : "Recent Posts"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "Your email address will not be published. Required fields are marked"
+  comment_form_info_email    : "Your email address will not be published."
   comment_form_comment_label : "Comment"
   comment_form_md_info       : "Markdown is supported."
+  comment_form_md_info_sup   : "is supported."
   comment_form_name_label    : "Name"
   comment_form_email_label   : "Email address"
   comment_form_website_label : "Website (optional)"
+  comment_form_optional      : "optional"
   comment_btn_submit         : "Submit Comment"
   comment_btn_submitted      : "Submitted"
   comment_success_msg        : "Thanks for your comment! It will show on the site once it has been approved."
@@ -79,11 +82,14 @@ es: &DEFAULT_ES
   recent_posts               : "Entradas recientes"
   undefined_wpm              : "Parametro words_per_minute (Palabras por minuto) no definido en _config.yml"
   comment_form_info          :
+  comment_form_info_email    :
   comment_form_comment_label :
   comment_form_md_info       :
+  comment_form_md_info_sup   :
   comment_form_name_label    :
   comment_form_email_label   :
   comment_form_website_label :
+  comment_form_optional      :
   comment_btn_submit         :
   comment_btn_submitted      :
   comment_success_msg        :
@@ -125,11 +131,14 @@ fr: &DEFAULT_FR
   undefined_wpm              : "Le paramètre words_per_minute n'est pas défini dans _config.yml"
   comments_title             : "Commentaires"
   comment_form_info          : "Votre adresse email ne sera pas visible. Les champs obligatoires sont marqués"
+  comment_form_info_email    :
   comment_form_comment_label : "Commentaire"
   comment_form_md_info       : "Markdown est supporté."
+  comment_form_md_info_sup   :
   comment_form_name_label    : "Nom"
   comment_form_email_label   : "Adresse mail"
   comment_form_website_label : "Site web (optionnel)"
+  comment_form_optional      : "optionnel"
   comment_btn_submit         : "Envoyer"
   comment_btn_submitted      : "Envoyé"
   comment_success_msg        : "Merci pour votre commentaire, il sera visible sur le site une fois approuvé."
@@ -172,11 +181,14 @@ tr: &DEFAULT_TR
   recent_posts               : "Son yazılar"
   undefined_wpm              : "_config.yml dosyasında tanımlanmamış words_per_minute parametresi"
   comment_form_info          : "Email adresiniz gösterilmeyecektir. Zorunlu alanlar işaretlenmiştir"
+  comment_form_info_email    :
   comment_form_comment_label : "Yorumunuz"
   comment_form_md_info       : "Markdown desteklenmektedir."
+  comment_form_md_info_sup   :
   comment_form_name_label    : "Adınız"
   comment_form_email_label   : "Email adresiniz"
   comment_form_website_label : "Websiteniz (opsiyonel)"
+  comment_form_optional      : "opsiyonel"
   comment_btn_submit         : "Yorum Yap"
   comment_btn_submitted      : "Gönderildi"
   comment_success_msg        : "Yorumunuz için teşekkürler! Yorumunuz onaylandıktan sonra sitede gösterilecektir."
@@ -215,11 +227,14 @@ pt: &DEFAULT_PT
   recent_posts               : "Artigos Recentes"
   undefined_wpm              : "Parâmetro words_per_minute não definido em _config.yml"
   comment_form_info          : "O seu endereço email não será publicado. Os campos obrigatórios estão assinalados"
+  comment_form_info_email    :
   comment_form_comment_label : "Comentário"
   comment_form_md_info       : "Markdown é suportado."
+  comment_form_md_info_sup   :
   comment_form_name_label    : "Nome"
   comment_form_email_label   : "Endereço Email"
   comment_form_website_label : "Site (opcional)"
+  comment_form_optional      : "opcional"
   comment_btn_submit         : "Sumbeter Comentário"
   comment_btn_submitted      : "Submetido"
   comment_success_msg        : "Obrigado pelo seu comentário! Será visível no site logo que aprovado."
@@ -254,11 +269,14 @@ pt-BR:
   recent_posts               : "Postagens recentes"
   undefined_wpm              : "Parâmetro indefinido em word_per_minute no _config.yml"
   comment_form_info          :
+  comment_form_info_email    :
   comment_form_comment_label :
   comment_form_md_info       :
+  comment_form_md_info_sup   :
   comment_form_name_label    :
   comment_form_email_label   :
   comment_form_website_label :
+  comment_form_optional      :
   comment_btn_submit         :
   comment_btn_submitted      :
   comment_success_msg        :
@@ -297,11 +315,14 @@ it: &DEFAULT_IT
   recent_posts               : "Articoli Recenti"
   undefined_wpm              : "Parametro words_per_minute non definito in _config.yml"
   comment_form_info          : "Il tuo indirizzo email non sarà pubblicato. Sono segnati i campi obbligatori"
+  comment_form_info_email    :
   comment_form_comment_label : "Commenta"
   comment_form_md_info       : "Il linguaggio Markdown è supportato"
+  comment_form_md_info_sup   :
   comment_form_name_label    : "Nome"
   comment_form_email_label   : "Indirizzo email"
   comment_form_website_label : "Sito Web (opzionale)"
+  comment_form_optional      : "opzionale"
   comment_btn_submit         : "Invia commento"
   comment_btn_submitted      : "Inviato"
   comment_success_msg        : "Grazie per il tuo commento! Verrà visualizzato nel sito una volta che sarà approvato."
@@ -340,11 +361,14 @@ zh: &DEFAULT_ZH
   recent_posts               : "最新文章"
   undefined_wpm              : "_config.yml配置中words_per_minute字段未定义"
   comment_form_info          : "您的电子邮箱地址并不会被展示。请填写标记为必须的字段。"
+  comment_form_info_email    :
   comment_form_comment_label : "评论"
   comment_form_md_info       : "Markdown语法已支持。"
+  comment_form_md_info_sup   :
   comment_form_name_label    : "姓名"
   comment_form_email_label   : "电子邮箱"
   comment_form_website_label : "网站（可选）"
+  comment_form_optional      : "可选"
   comment_btn_submit         : "提交评论"
   comment_btn_submitted      : "已提交"
   comment_success_msg        : "感谢您的评论！被批准后它会立即在此站点展示。"
@@ -385,11 +409,14 @@ zh-TW:
   recent_posts               : "最新文章"
   undefined_wpm              : "_config.yml 中未定義 words_per_minute"
   comment_form_info          : "您的電子信箱不會被公開. 必填部份已標記"
+  comment_form_info_email    :
   comment_form_comment_label : "留言內容"
   comment_form_md_info       : "支援Markdown語法。"
+  comment_form_md_info_sup   :
   comment_form_name_label    : "名字"
   comment_form_email_label   : "電子信箱帳號"
   comment_form_website_label : "網頁 (可選填)"
+  comment_form_optional      : "可選填"
   comment_btn_submit         : "送出留言"
   comment_btn_submitted      : "已送出"
   comment_success_msg        : "感謝您的留言！ 審核後將會顯示在站上。"
@@ -426,11 +453,14 @@ de: &DEFAULT_DE
   recent_posts               : "Aktuelle Beiträge"
   undefined_wpm              : "Undefinierter Parameter words_per_minute in _config.yml"
   comment_form_info          : "Ihre E-Mail Adresse wird nicht veröffentlicht. Benötigte Felder sind markiert"
+  comment_form_info_email    : "Ihre E-Mail Adresse wird nicht veröffentlicht."
   comment_form_comment_label : "Kommentar"
   comment_form_md_info       : "Markdown wird unterstützt."
+  comment_form_md_info_sup   : "wird unterstützt."
   comment_form_name_label    : "Name"
   comment_form_email_label   : "E-Mail Addresse"
   comment_form_website_label : "Webseite (optional)"
+  comment_form_optional      : "optional"
   comment_btn_submit         : "Kommentar absenden"
   comment_btn_submitted      : "Versendet"
   comment_success_msg        : "Danke für ihren Kommentar! Er wird auf der Seite angezeigt, nachdem er geprüft wurde."
@@ -479,11 +509,14 @@ ne: &DEFAULT_NE
   recent_posts               : "ताजा लेखहरु"
   undefined_wpm              : "अपरिभाषित प्यारामिटर शब्दहरू_प्रति_मिनेट at _config.yml"
   comment_form_info          : "तपाइँको इमेल ठेगाना प्रकाशित गरिने छैन।आवश्यक जानकारीहरुमा चिन्ह लगाइको छ"
+  comment_form_info_email    : 
   comment_form_comment_label : "टिप्पणी"
   comment_form_md_info       : "मार्कडाउन  समर्थित छ।"
+  comment_form_md_info_sup   :
   comment_form_name_label    : "नाम"
   comment_form_email_label   : "इमेल ठेगाना"
   comment_form_website_label : "वेबसाइट (वैकल्पिक)"
+  comment_form_optional      : "वैकल्पिक"
   comment_btn_submit         : "टिप्पणी दिनुहोस् "
   comment_btn_submitted      : "टिप्पणी भयो"
   comment_success_msg        : "तपाईंको टिप्पणीको लागि धन्यवाद! एक पटक यो अनुमोदन गरेपछी यो साइटमा देखाउनेछ।"
@@ -522,11 +555,14 @@ ko: &DEFAULT_KO
   recent_posts               : "최근 포스트"
   undefined_wpm              : "Undefined parameter words_per_minute at _config.yml"
   comment_form_info          : "이메일은 공개되지 않습니다. 작성 필요 필드:"
+  comment_form_info_email    : 
   comment_form_comment_label : "댓글"
   comment_form_md_info       : "마크다운을 지원합니다."
+  comment_form_md_info_sup   :
   comment_form_name_label    : "이름"
   comment_form_email_label   : "이메일"
   comment_form_website_label : "웹사이트(선택사항)"
+  comment_form_optional      : "선택사항"
   comment_btn_submit         : "댓글 등록"
   comment_btn_submitted      : "등록됨"
   comment_success_msg        : "감사합니다! 댓글이 머지된 후 확인하실 수 있습니다."
@@ -565,11 +601,14 @@ ru: &DEFAULT_RU
   recent_posts               : "Свежие записи"
   undefined_wpm              : "Не определён параметр words_per_minute в _config.yml"
   comment_form_info          : "Ваш адрес электронной почты не будет опубликован. Обязательные поля помечены"
+  comment_form_info_email    : 
   comment_form_comment_label : "Комментарий"
   comment_form_md_info       : "Поддерживается синтаксис Markdown."
+  comment_form_md_info_sup   :
   comment_form_name_label    : "Имя"
   comment_form_email_label   : "Электронная почта"
   comment_form_website_label : "Ссылка на сайт (необязательно)"
+  comment_form_optional      : "необязательно"
   comment_btn_submit         : "Оставить комментарий"
   comment_btn_submitted      : "Отправлено"
   comment_success_msg        : "Спасибо за Ваш комментарий! Он будет опубликован на сайте после проверки."
