changes for seperate jekyll configs

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "de-DE"
-title                    : "ONDATA"
+title                    : "ONDATA PREVIEW"
 title_separator          : "×"
 name                     : "dev4223"
 email                    : "developer4223@gmail.com"
