--- a/netlify.toml
+++ b/netlify.toml
@@ -7,3 +7,8 @@
 # will inherit these settings.
 [context.deploy-preview]
   command = "jekyll build --config _config.yml,_config_prev.yml"
+
+# Branch Deploy context: All deploys that are not in
+# an active Deploy Preview will inherit these settings.
+[context.branch-deploy]
+  command = "jekyll build --config _config.yml,_config_prev.yml"
