--- a/_config.yml
+++ b/_config.yml
@@ -166,10 +166,11 @@ sass:
 # Outputting
 #permalink: /:title/
 permalink: /:categories/:title/
+
+# jekyll-paginate
 paginate: 20 # amount of posts to show
-#paginate_path: /page:num/
 paginate_path: "/legacy/page:num/"
-timezone: # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: "Europe/Berlin" # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
 # Plugins
@@ -178,7 +179,6 @@ gems:
   - jekyll-sitemap
   - jekyll-archives
   - jekyll-auto-image
-  - jekyll-paginate-v2
   - jekyll-gist
   - jekyll-feed
   - jemoji
@@ -279,3 +279,4 @@ jekyll-archives:
 #   permalinks:
 #     category: /categories/:name/
 #     tag: /tags/:name/
+
