--- a/staticman.yml
+++ b/staticman.yml
@@ -70,6 +70,9 @@ comments:
     # Enable notifications
     enabled: true
 
+    # FROM email address
+    fromAddress: "Thank you <no-reply@datamail.hokr.us>"
+
     # (!) ENCRYPTED
     #
     # Mailgun API key
