--- a/_config_local.yml
+++ b/_config_local.yml
@@ -5,6 +5,9 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : ""
 
 # same excludes like in _config.yml
+include:
+  - _pages
+  - _redirects
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
