--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -5,6 +5,9 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : "ondata.hokr.us"
 
 # exclude robots.txt for production
+include:
+  - _pages
+  - _redirects
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
