--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Holger Kral:
   name: "Holger Kral"
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
-  avatar: "/assets/images/avatar.jpg"
+  avatar: "/assets/images/avatar_s.jpg"
   twitter: HolgerKral
   github: dev4223
 
@@ -12,7 +12,7 @@ developer4223:
   name: "dev4223"
   email: "developer4223@gmail.com"
   bio: "lerning all about data"
-  avatar: "/assets/images/avatar.jpg"
+  avatar: "/assets/images/avatar_s.jpg"
   twitter: HolgerKral
   github: dev4223
 
