--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ analytics:
 # Site Author
 author:
   name             : "dev4223"
-  avatar           : "/assets/images/avatar.jpg"
+  avatar           : "/assets/images/avatar_s.jpg"
   bio              : "lerning all about data"
   location         : "Berlin"
   email            :
