--- a/_config_local.yml
+++ b/_config_local.yml
@@ -1,5 +1,5 @@
 # PREVIEW config
-title                    : "ONDATA"
+title                    : "ONDATA LOCAL"
 url                      : "http://ondata.local" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : ""
