--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,7 @@ yandex_site_verification :
 # Social Sharing
 twitter:
   username               : HolgerKral
-og_image                 : # Open Graph/Twitter default site image
+og_image                 : "/assets/images/header/head_natur1.jpg"  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
 social:
