--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,6 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
-  - _posts/2017-03-17-ein-erstes-r-notebook.md
   - _posts/__replace_rnb.md
 keep_files:
   - .git
@@ -212,6 +211,7 @@ defaults:
       comments: false
       share: true
       related: false
+      rnotebook: false
       header:
         image: /assets/images/header/head_spree1.jpg
         caption: "&copy; [Kral • Photography](https://kral-photography.com)"
