--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,7 @@ title_separator          : "×"
 name                     : "dev4223"
 email                    : "developer4223@gmail.com"
 description              : > # this means to ignore newlines until "url:"
-  "Daten. Das Leben wird durch die Daten bestimmt und wir können bestimmen, welche Daten wir
-    preisgeben und wie wir sie preisgeben. Wir können sogar bestimmen, wie diese Daten verarbeitet werden. Das zum Lernen. Und hier darüber berichten."
+  "Daten. Überall sind Daten. Lernen, wo und wie sie leben. Und hier darüber schreiben."
 url                      : "https://ondata.hokr.us" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 enforce_ssl              : "ondata.hokr.us"
@@ -193,8 +192,13 @@ whitelist:
 # - http://jch.penibelst.de/
 compress_html:
   clippings: all
+  comments: ["<!-- ", " -->"]
+  endings: all
   ignore:
-    envs: development
+    envs: [local]
+  blanklines: false
+  profile: false
+  startings: [html, head, body]
 
 
 # Defaults
