--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -1,8 +1,8 @@
 # PRODUCTION config
 title                    : "ONDATA"
-url                      : "https://ondata.hokr.us" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://ondata.work" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-enforce_ssl              : "ondata.hokr.us"
+enforce_ssl              : "ondata.work"
 
 # exclude robots.txt for production
 include:
