--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
-#main:
-  #- title: "Posts"
-  #  url: /year-archive/
+main:
+  - title: "Posts"
+    url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   #- title: "Sitemap"
   #  url: /sitemap/
-  #- title: "Über"
-  #  url: /uber/
-  #- title: "Kontakt"
-  #  url: /kontakt/
+  - title: "Über"
+    url: /uber/
+  - title: "Kontakt"
+    url: /kontakt/
