--- a/staticman.yml
+++ b/staticman.yml
@@ -17,7 +17,7 @@ comments:
   # When allowedOrigins is defined, only requests sent from one of the domains
   # listed will be accepted. The origin is sent as part as the `options` object
   # (e.g. <input name="options[origin]" value="http://yourdomain.com/post1")
-  allowedOrigins: ["localhost","ondata.local","ondata.work","0ndata.de","develop--ondata.netlify.com","post-preview--ondata.netlify.com","ondata.hokr.us"]
+  allowedOrigins: ["localhost","ondata.local","ondata.work","0ndata.de","develop.ondata.work","post-preview.ondata.work","ondata.hokr.us"]
 
   # (*) REQUIRED
   #
