no html compress profile at end of the page

--- a/_config_local.yml
+++ b/_config_local.yml
@@ -47,5 +47,5 @@ compress_html:
   ignore:
     envs: [local]
   blanklines: true
-  profile: true
+  profile: false
   startings: [html, head, body]
