--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ words_per_minute         : 200
 comments:
   provider               : "staticman" # false (default), "disqus", "discourse", "facebook", "google-plus", "staticman", "custom"
 staticman:
-  branch                 : "develop"
+  branch                 : "master"
 atom_feed:
   path                   : # blank (default) uses feed.xml
 
