--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
-  - _posts/__replace_rnb.md
+  - _posts/__notes.md
 keep_files:
   - .git
   - .svn
