--- a/_config_0ndata.yml
+++ b/_config_0ndata.yml
@@ -36,4 +36,4 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
-  - _posts/__replace_rnb.md
+  - _posts/__notes.md
