--- a/_config_local.yml
+++ b/_config_local.yml
@@ -36,7 +36,7 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
-  - _posts/__replace_rnb.md
+  - _posts/__notes.md
 
   # HTML Compression
 # - http://jch.penibelst.de/
