--- a/_config_prev.yml
+++ b/_config_prev.yml
@@ -33,7 +33,7 @@ exclude:
   - tmp
   - /docs # ignore Minimal Mistakes /docs
   - /test # ignore Minimal Mistakes /test
-  - _posts/__replace_rnb.md
+  - _posts/__notes.md
 
   # HTML Compression
 # - http://jch.penibelst.de/
