html compression with all tags

--- a/_config.yml
+++ b/_config.yml
@@ -193,13 +193,12 @@ whitelist:
 compress_html:
   clippings: all
   comments: ["<!-- ", " -->"]
-  endings: all
+  endings: []
   ignore:
     envs: [local]
   blanklines: false
   profile: false
-  startings: [html, head, body]
-
+  startings: []
 
 # Defaults
 defaults:
