--- a/_config_local.yml
+++ b/_config_local.yml
@@ -38,14 +38,14 @@ exclude:
   - /test # ignore Minimal Mistakes /test
   - _posts/__notes.md
 
-  # HTML Compression
+# HTML Compression
 # - http://jch.penibelst.de/
 compress_html:
   clippings: all
-  comments:
-  endings: all
+  comments: ["<!-- ", " -->"]
+  endings: []
   ignore:
     envs: [local]
   blanklines: true
   profile: false
-  startings: [html, head, body]
+  startings: []
