--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ author:
   avatar           : "/assets/images/avatar_s.jpg"
   bio              : "lerning all about data"
   location         : "Berlin"
-  email            :
+  email            : "developer4223@gmail.com"
   uri              :
   bitbucket        :
   codepen          :
